add drone fields projection for location update
