# swagger.yaml
@@ -1184,6 +1184,11 @@ paths:
           description: Limit number of nearest drones to be returned, it is 1 by default.
           type: integer
           required: false
+        - in: query
+          name: droneFields
+          description: Specify fields of drone to be projected. Fields are comma split.
+          type: string
+          required: false
       responses:
         200:
           description: successful operation
